@@ -44,6 +44,10 @@
 #include "bus-errors.h"
 #include "udev-util.h"
 
+
+#define SD_MESSAGE_SHUTDOWN         SD_ID128_MAKE(98,26,88,66,d1,d5,4a,49,9c,4e,98,92,1d,93,bc,40)
+
+
 static int property_get_idle_hint(
                 sd_bus *bus,
                 const char *path,
