@@ -22,6 +22,7 @@ systemd System and Service Manager
     - remove unused id SD_MESSAGE_TIMEZONE_CHANGE;
     - move id's SD_MESSAGE_JOURNAL_* to separate module journal;
     - move id SD_MESSAGE_COREDUMP to separate module journal;
+    - move id SD_MESSAGE_SHUTDOWN to logind module;
  * coredump:
     - move coredump sysctl config to separate module journal;
     - move coredump man pages to separate module journal;
